# mpm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  commitlint.config.cjs  readme
.github/workflows/: ci.yml
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/mpm_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: test_healthcheck.py
docs/: ADR-0001-tech-stack.md  Corrugation & Packaging Project Manager — System Design (v1)  mpm_issues_pack.csv
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: HomePage.test.tsx  HomePage.tsx
ops/: README.md
ops/docker/: backend.Dockerfile
tests/: README.md  package.json  playwright.config.ts
tests/specs/: example.spec.ts
