[tool.poetry]
name = "mpm-backend"
version = "0.1.0"
description = "Corrugation & Packaging Project Manager backend"
authors = ["MPM Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "mpm_backend" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.13"
ruff = "^0.4.2"
pytest = "^8.1"
pytest-django = "^4.8"
pytest-cov = "^5.0"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mpm_backend.settings"
pythonpath = ["."]
addopts = "--cov=mpm_backend --cov-report=term-missing"
